src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-both-are-structs-2.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-both-are-structs-2.rs:7:11
   |
LL | fn foo(mut x: Ref, y: Ref) {
   |               ---     --- these two types are declared with different lifetimes...
LL |     x.b = y.b;
   |           ^^^ ...but data from `y` flows into `x` here

error: aborting due to previous error

